# AI-Powered-Knowledge-Manager

./: README.md  pyproject.toml  requirements.txt
data/: metadata.db
src/pkm_ai/: __init__.py  app_state.py  chat.py  embeddings.py  export.py  gui.py  ingestion.py  pipeline.py  storage.py  streamlit_app.py
src/pkm_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_app_state.py  test_chat.py  test_embeddings.py  test_export.py  test_ingestion.py  test_pipeline.py  test_storage.py
